Add avatar uploading to user.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,10 @@
   <div><%= f.label :email %><br />
     <%= f.email_field :email%></div>
 
+
+  <%= f.label :avatar %><br />
+  <%= f.file_field :avatar %>
+
   <div><%= f.label :password %><br />
     <%= f.password_field :password %></div>
 
